# ruby-cgltf

./: .gitmodules  ChangeLog  LICENSE.txt  README.md
cgltf_dll/: CMakeLists.txt  build_cgltf_windows.bat
example/: test.rb
generator/: README.md  batch_generate.sh  cgltf_cindex_mapping.json  cgltf_define_mapping.json  cgltf_generator.py  cgltf_headers_list.json  cgltf_parser.py  generate_cgltf.py  generate_initial_cindex_mapping.py  generate_initial_define_mapping.py  generate_initial_mapping.sh
lib/: cgltf.dylib  cgltf.rb  cgltf_main.rb
